--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.5",
     "framer-motion": "^11.3.6",
+    "markdown-to-jsx": "^7.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
