--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "framer-motion": "^11.3.6",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "@react-three/drei": "^10.3.0",
+    "@react-three/fiber": "^9.1.4",
+    "leva": "^0.10.0",
+    "motion": "^12.20.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.25.1"
+    "react-router-dom": "^6.25.1",
+    "three": "^0.178.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
